name:                adventofcode
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/cpennington/adventofcode#readme
license:             BSD3
license-file:        LICENSE
author:              Calen Pennington
maintainer:          calen.pennington@gmail.com
copyright:           2015
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Advent.Day1
                     , Advent.Day2
                     , Advent.Day3
                     , Advent.Day4
                     , Advent.Day5
                     , Advent.Day6
  build-depends:       base >= 4.7 && < 5
                     , split
                     , containers
                     , cryptohash
                     , text
                     , bytestring
                     , parsec
  default-language:    Haskell2010

executable adventofcode-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode
                     , split
  default-language:    Haskell2010

test-suite adventofcode-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , adventofcode
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cpennington/adventofcode
